add gnosis & celo

--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "deploy:skale-nebula": "hardhat deploy --mainnet skale-nebula --upgradable true",
     "deploy:naut": "hardhat deploy --mainnet naut --upgradable true",
     "deploy:opbnb": "hardhat deploy --mainnet opbnb --upgradable true",
-    "deploy:scroll": "hardhat deploy --mainnet scroll --upgradable true"
+    "deploy:scroll": "hardhat deploy --mainnet scroll --upgradable true",
+    "deploy:celo": "hardhat deploy --mainnet celo --upgradable true",
+    "deploy:gnosis": "hardhat deploy --mainnet gnosis --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
