--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.7.4",
-    "zksync-web3": "^0.13.4"
+    "zksync-web3": "0.13.4"
   },
   "resolutions": {
     "ethers": "5.7.1"
