--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/sdk",
-  "version": "1.13.3",
+  "version": "1.14.0-alpha.5",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -21,19 +21,22 @@
   "dependencies": {
     "@mesonfi/contract-abis": "^1.13.0",
     "@mesonfi/contract-types": "^1.13.0",
-    "@mysten/sui.js": "^0.33.0",
-    "aptos": "^1.3.16",
+    "@mysten/sui.js": "0.33.0",
+    "@solana/spl-token": "0.3.8",
+    "@solana/web3.js": "1.87.5",
+    "aptos": "1.3.16",
     "cross-fetch": "^3.1.5",
-    "ethers": "^5.7.1",
+    "ethers": "5.7.1",
     "lodash": "^4.17.21",
-    "tronweb": "^4.3.0",
-    "zksync-web3": "^0.13.4"
+    "tronweb": "4.3.0",
+    "zksync-web3": "0.13.4"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/chai-as-promised": "^7.1.5",
     "@types/lodash": "^4.14.186",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^20.9.0",
     "chai": "^4.3.6",
     "chai-as-promised": "^7.1.1",
     "ethereum-waffle": "^4.0.4",
