--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/sdk",
-  "version": "1.14.0-alpha.5",
+  "version": "1.14.0-alpha.4",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -25,10 +25,12 @@
     "@solana/spl-token": "0.3.8",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
+    "bs58": "^4.0.1",
     "cross-fetch": "^3.1.5",
     "ethers": "5.7.1",
     "lodash": "^4.17.21",
     "tronweb": "4.3.0",
+    "tweetnacl": "1.0.3",
     "zksync-web3": "0.13.4"
   },
   "devDependencies": {
