--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.14.0-alpha.4",
+  "version": "1.14.0-beta.1",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@mesonfi/contract-abis": "^1.13.0",
-    "@mesonfi/sdk": "^1.14.0-alpha.4",
+    "@mesonfi/sdk": "^1.14.0-beta.1",
     "@mysten/sui.js": "0.33.0",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
