--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "testnet:tron": "hardhat deploy --testnet tron --upgradable true",
     "testnet:linea": "hardhat deploy --testnet linea --upgradable true",
     "testnet:scroll": "hardhat deploy --testnet scroll --upgradable true",
-    "testnet:skale": "hardhat deploy --testnet skale --upgradable true",
+    "testnet:skale-europa": "hardhat deploy --testnet skale-europa --upgradable true",
+    "testnet:skale-nebula": "hardhat deploy --testnet skale-nebula --upgradable true",
     "testnet:a8": "hardhat deploy --testnet ancient8 --upgradable true",
     "testnet:manta": "hardhat deploy --testnet manta --upgradable true",
     "testnet:taiko": "hardhat deploy --testnet taiko --upgradable true",
+    "testnet:x1": "hardhat deploy --testnet x1 --upgradable true",
+    "testnet:viction": "hardhat deploy --testnet viction --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
