--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.14.0-rc.3",
+  "version": "1.14.0",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,13 +19,13 @@
   },
   "dependencies": {
     "@mesonfi/contract-abis": "^1.13.0",
-    "@mesonfi/sdk": "^1.14.0-rc.3",
+    "@mesonfi/sdk": "^1.14.1",
     "@mysten/sui.js": "0.33.0",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
-    "ethers": "5.7.1",
+    "ethers": "5.7.2",
     "lodash": "^4.17.21",
-    "tronweb": "4.3.0"
+    "tronweb": "5.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.9.0",
