--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "testnet:taiko": "hardhat deploy --testnet taiko --upgradable true",
     "testnet:x1": "hardhat deploy --testnet x1 --upgradable true",
     "testnet:viction": "hardhat deploy --testnet viction --upgradable true",
+    "testnet:zkfair": "hardhat deploy --testnet zkfair --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
