--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "deploy:scroll": "hardhat deploy --mainnet scroll --upgradable true",
     "deploy:celo": "hardhat deploy --mainnet celo --upgradable true",
     "deploy:gnosis": "hardhat deploy --mainnet gnosis --upgradable true",
-    "deploy:zkfair": "hardhat deploy --mainnet zkfair --upgradable true"
+    "deploy:zkfair": "hardhat deploy --mainnet zkfair --upgradable true",
+    "deploy:bevm": "hardhat deploy --mainnet bevm --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
