--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "testnet:viction": "hardhat deploy --testnet viction --upgradable true",
     "testnet:zkfair": "hardhat deploy --testnet zkfair --upgradable true",
     "testnet:b2": "hardhat deploy --testnet b2 --upgradable true",
+    "testnet:merlin": "hardhat deploy --testnet merlin --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
