--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.15.8",
+  "version": "1.16.2",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@mesonfi/contract-abis": "^1.13.0",
-    "@mesonfi/sdk": "^1.15.7",
+    "@mesonfi/sdk": "^1.16.2",
     "@mysten/sui.js": "0.33.0",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
     "ethers": "5.7.2",
     "lodash": "^4.17.21",
+    "starknet": "^5.24.3",
     "tronweb": "5.2.0"
   },
   "devDependencies": {
