--- a/package.json
+++ b/package.json
@@ -67,7 +67,9 @@
     "deploy:celo": "hardhat deploy --mainnet celo --upgradable true",
     "deploy:gnosis": "hardhat deploy --mainnet gnosis --upgradable true",
     "deploy:zkfair": "hardhat deploy --mainnet zkfair --upgradable true",
-    "deploy:bevm": "hardhat deploy --mainnet bevm --upgradable true"
+    "deploy:bevm": "hardhat deploy --mainnet bevm --upgradable true",
+    "deploy:map": "hardhat deploy --mainnet map --upgradable true",
+    "deploy:core": "hardhat deploy --mainnet core --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
