--- a/package.json
+++ b/package.json
@@ -70,7 +70,9 @@
     "deploy:bevm": "hardhat deploy --mainnet bevm --upgradable true",
     "deploy:map": "hardhat deploy --mainnet map --upgradable true",
     "deploy:core": "hardhat deploy --mainnet core --upgradable true",
-    "deploy:ancient8": "hardhat deploy --mainnet ancient8 --upgradable true"
+    "deploy:ancient8": "hardhat deploy --mainnet ancient8 --upgradable true",
+    "deploy:zeta": "hardhat deploy --mainnet zeta --upgradable true",
+    "deploy:merlin": "hardhat deploy --mainnet merlin --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
