--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "testnet:viction": "hardhat deploy --testnet viction --upgradable true",
     "testnet:zkfair": "hardhat deploy --testnet zkfair --upgradable true",
     "testnet:goshen": "hardhat deploy --testnet goshen --upgradable true",
+    "testnet:bob": "hardhat deploy --testnet bob --upgradable true",
+    "testnet:bitlayer": "hardhat deploy --testnet bitlayer --upgradable true",
     "testnet:b2": "hardhat deploy --testnet b2 --upgradable true",
     "testnet:merlin": "hardhat deploy --testnet merlin --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
@@ -74,6 +76,8 @@
     "deploy:ancient8": "hardhat deploy --mainnet ancient8 --upgradable true",
     "deploy:zeta": "hardhat deploy --mainnet zeta --upgradable true",
     "deploy:mode": "hardhat deploy --mainnet mode --upgradable true",
+    "deploy:inevm": "hardhat deploy --mainnet inevm --upgradable true",
+    "deploy:zklink": "hardhat deploy --mainnet zklink --network zklink --upgradable true",
     "deploy:blast": "hardhat deploy --mainnet blast --upgradable true",
     "deploy:merlin": "hardhat deploy --mainnet merlin --upgradable true"
   },
