update presets & sdk

--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "testnet:viction": "hardhat deploy --testnet viction --upgradable true",
     "testnet:zkfair": "hardhat deploy --testnet zkfair --upgradable true",
     "testnet:goshen": "hardhat deploy --testnet goshen --upgradable true",
-    "testnet:bob": "hardhat deploy --testnet bob --upgradable true",
     "testnet:bitlayer": "hardhat deploy --testnet bitlayer --upgradable true",
     "testnet:b2": "hardhat deploy --testnet b2 --upgradable true",
     "testnet:merlin": "hardhat deploy --testnet merlin --upgradable true",
+    "testnet:bob": "hardhat deploy --testnet bob --upgradable true",
+    "testnet:tuna": "hardhat deploy --testnet tuna --upgradable true",
+    "testnet:oneness": "hardhat deploy --testnet oneness --upgradable true",
     "deploy:eth": "hardhat deploy --mainnet eth --upgradable true",
     "deploy:bnb": "hardhat deploy --mainnet bnb --upgradable true",
     "deploy:polygon": "hardhat deploy --mainnet polygon --upgradable true",
@@ -64,6 +66,7 @@
     "deploy:mnt": "hardhat deploy --mainnet mnt --upgradable true",
     "deploy:skale-europa": "hardhat deploy --mainnet skale-europa --upgradable true",
     "deploy:skale-nebula": "hardhat deploy --mainnet skale-nebula --upgradable true",
+    "deploy:skale-calypso": "hardhat deploy --mainnet skale-calypso --upgradable true",
     "deploy:naut": "hardhat deploy --mainnet naut --upgradable true",
     "deploy:opbnb": "hardhat deploy --mainnet opbnb --upgradable true",
     "deploy:scroll": "hardhat deploy --mainnet scroll --upgradable true",
@@ -71,15 +74,20 @@
     "deploy:gnosis": "hardhat deploy --mainnet gnosis --upgradable true",
     "deploy:zkfair": "hardhat deploy --mainnet zkfair --upgradable true",
     "deploy:bevm": "hardhat deploy --mainnet bevm --upgradable true",
+    "deploy:bevm2": "hardhat deploy --mainnet bevm2 --upgradable true",
     "deploy:map": "hardhat deploy --mainnet map --upgradable true",
     "deploy:core": "hardhat deploy --mainnet core --upgradable true",
     "deploy:ancient8": "hardhat deploy --mainnet ancient8 --upgradable true",
     "deploy:zeta": "hardhat deploy --mainnet zeta --upgradable true",
     "deploy:mode": "hardhat deploy --mainnet mode --upgradable true",
     "deploy:inevm": "hardhat deploy --mainnet inevm --upgradable true",
-    "deploy:zklink": "hardhat deploy --mainnet zklink --network zklink --upgradable true",
     "deploy:blast": "hardhat deploy --mainnet blast --upgradable true",
-    "deploy:merlin": "hardhat deploy --mainnet merlin --upgradable true"
+    "deploy:zklink": "hardhat deploy --mainnet zklink --network zklink --upgradable true",
+    "deploy:xlayer": "hardhat deploy --mainnet xlayer --upgradable true",
+    "deploy:merlin": "hardhat deploy --mainnet merlin --upgradable true",
+    "deploy:b2": "hardhat deploy --mainnet b2 --upgradable true",
+    "deploy:bitlayer": "hardhat deploy --mainnet bitlayer --upgradable true",
+    "deploy:taproot": "hardhat deploy --mainnet taproot --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
