--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "deploy:xlayer": "hardhat deploy --mainnet xlayer --upgradable true",
     "deploy:merlin": "hardhat deploy --mainnet merlin --upgradable true",
     "deploy:b2": "hardhat deploy --mainnet b2 --upgradable true",
+    "deploy:bb": "hardhat deploy --mainnet bb --upgradable true",
     "deploy:bitlayer": "hardhat deploy --mainnet bitlayer --upgradable true",
     "deploy:taproot": "hardhat deploy --mainnet taproot --upgradable true",
     "deploy:bob": "hardhat deploy --mainnet bob --upgradable true"
