--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "lib",
     "declaration": true,
     "resolveJsonModule": true,
+    "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types"]
   },
   "include": ["./src"],
