--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "deploy:base": "hardhat deploy --mainnet base --upgradable true",
     "deploy:metis": "hardhat deploy --mainnet metis --upgradable true",
     "deploy:kava": "hardhat deploy --mainnet kava --upgradable true",
+    "deploy:kroma": "hardhat deploy --mainnet kroma --upgradable true",
     "deploy:manta": "hardhat deploy --mainnet manta --upgradable true",
     "deploy:mnt": "hardhat deploy --mainnet mnt --upgradable true",
     "deploy:skale-europa": "hardhat deploy --mainnet skale-europa --upgradable true",
