--- a/packages/presets/package.json
+++ b/packages/presets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mesonfi/presets",
-  "version": "1.18.0-rc.4",
+  "version": "1.18.0",
   "description": "",
   "license": "MIT",
   "repository": "https://github.com/MesonFi/meson-contracts-solidity",
@@ -20,7 +20,7 @@
   "dependencies": {
     "@ckb-lumos/lumos": "^0.22.2",
     "@mesonfi/contract-abis": "^1.16.0",
-    "@mesonfi/sdk": "^1.18.0-rc.3",
+    "@mesonfi/sdk": "^1.18.0",
     "@mysten/sui.js": "0.54.1",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
