--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
     "deploy:bitlayer": "hardhat deploy --mainnet bitlayer --upgradable true",
     "deploy:taproot": "hardhat deploy --mainnet taproot --upgradable true",
     "deploy:bob": "hardhat deploy --mainnet bob --upgradable true",
-    "deploy:taiko": "hardhat deploy --mainnet taiko --upgradable true"
+    "deploy:taiko": "hardhat deploy --mainnet taiko --upgradable true",
+    "deploy:ailayer": "hardhat deploy --mainnet ailayer --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
