--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,11 +26,15 @@
     "@solana/spl-token": "0.3.8",
     "@solana/web3.js": "1.87.5",
     "aptos": "1.3.16",
+    "bitcoinjs-lib": "^6.1.6",
     "bs58": "^4.0.1",
+    "bs58check": "^4.0.0",
     "cross-fetch": "^3.1.5",
+    "ecpair": "^2.1.0",
     "ethers": "5.7.2",
     "lodash": "^4.17.21",
     "starknet": "^5.24.3",
+    "tiny-secp256k1": "^2.2.3",
     "tronweb": "5.2.0",
     "tweetnacl": "1.0.3",
     "zksync-web3": "0.13.4"
