--- a/package.json
+++ b/package.json
@@ -93,7 +93,8 @@
     "deploy:taproot": "hardhat deploy --mainnet taproot --upgradable true",
     "deploy:bob": "hardhat deploy --mainnet bob --upgradable true",
     "deploy:taiko": "hardhat deploy --mainnet taiko --upgradable true",
-    "deploy:ailayer": "hardhat deploy --mainnet ailayer --upgradable true"
+    "deploy:ailayer": "hardhat deploy --mainnet ailayer --upgradable true",
+    "deploy:zircuit": "hardhat deploy --mainnet zircuit --upgradable true"
   },
   "devDependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.6.2",
