--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,9 +26,9 @@
     "@mysten/sui.js": "0.54.1",
     "@solana/spl-token": "0.3.8",
     "@solana/web3.js": "1.87.5",
-    "@ton/core": "^0.56.3",
-    "@ton/crypto": "^3.2.0",
-    "@ton/ton": "^14.0.0",
+    "@ton/core": "0.56.3",
+    "@ton/crypto": "3.3.0",
+    "@ton/ton": "14.0.0",
     "aptos": "1.3.16",
     "bitcoinjs-lib": "^6.1.6",
     "bs58": "^4.0.1",
