--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -37,6 +37,7 @@
     "ethers": "5.7.2",
     "lodash": "^4.17.21",
     "starknet": "^5.24.3",
+    "tonapi-sdk-js": "2.0.3",
     "tronweb": "5.2.0",
     "tweetnacl": "1.0.3",
     "zksync-web3": "0.13.4"
