--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,6 +26,9 @@
     "@mysten/sui.js": "0.54.1",
     "@solana/spl-token": "0.3.8",
     "@solana/web3.js": "1.87.5",
+    "@ton/core": "0.56.3",
+    "@ton/crypto": "3.3.0",
+    "@ton/ton": "14.0.0",
     "aptos": "1.3.16",
     "bitcoinjs-lib": "^6.1.6",
     "bs58": "^4.0.1",
@@ -34,6 +37,7 @@
     "ethers": "5.7.2",
     "lodash": "^4.17.21",
     "starknet": "^5.24.3",
+    "tonapi-sdk-js": "2.0.3",
     "tronweb": "5.2.0",
     "tweetnacl": "1.0.3",
     "zksync-web3": "0.13.4"
